--- a/Homework/Week 4/Segues and Tables/Lesson03/Base.lproj/Main.storyboard
+++ b/Homework/Week 4/Segues and Tables/Lesson03/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G0q-Oc-BQG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G0q-Oc-BQG">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -41,6 +41,9 @@
                                 <state key="normal" title="Display Table View">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="displayTableVC:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="bXa-s7-Rlc"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t0k-8x-tOe">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -69,7 +72,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="hzY-Hy-RMA"/>
                     <connections>
-                        <outlet property="displayTableView" destination="AG3-bY-Vru" id="eRn-C2-GCO"/>
                         <outlet property="swipeLabel" destination="t0k-8x-tOe" id="yin-51-Hfy"/>
                         <segue destination="tH5-nV-9zA" kind="show" identifier="showTableVC" id="O1F-Kb-DN0"/>
                         <segue destination="TDx-30-Rh6" kind="presentation" identifier="showSecondVC" id="2B7-Vn-Vgd"/>
