--- a/Classwork/Lesson10/MaryDelegationPractice/MaryDelegationPractice/Base.lproj/Main.storyboard
+++ b/Classwork/Lesson10/MaryDelegationPractice/MaryDelegationPractice/Base.lproj/Main.storyboard
@@ -62,6 +62,7 @@
                         <viewControllerLayoutGuide type="bottom" id="4TS-Kg-ZXb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="sQr-6G-OvO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNC-BI-FxW">
